--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,13 @@ h1 {
   font-size: 42px;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+
 .passwords {
   list-style: none;
   padding: 0;
