--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -4,6 +4,22 @@ body {
   background-color: #eee;
 }
 
+h1 {
+	text-align: center;
+}
+
+h4 {
+	text-align: center;
+}
+
+.homepage-recipe-tile {
+	margin-left: 1.2%;
+	margin-right: 1.2%;
+}
+
+.info-panel {
+	padding: 4px;
+}
 .form-signin {
   max-width: 330px;
   padding: 15px;
