--- a/client/src/home.css
+++ b/client/src/home.css
@@ -18,10 +18,21 @@
 /* bodyStyle */
 .bodyStyle {
     background-image: 'url(http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg)';
+    background-size: 200px;
+    background-color: #ffc57e;
 }
 
 h1 {
     text-align: center;
+}
+
+.homepage-recipe-tile {
+    margin-left: 1.2%;
+    margin-right: 1.2%;
+}
+
+.info-panel {
+    padding: 4px;
 }
 
 /* All below is from login.css */
@@ -40,14 +51,7 @@ h4 {
 	text-align: center;
 }
 
-.homepage-recipe-tile {
-	margin-left: 1.2%;
-	margin-right: 1.2%;
-}
 
-.info-panel {
-	padding: 4px;
-}
 .form-signin {
   max-width: 330px;
   padding: 15px;
