--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -1,26 +1,10 @@
+/*
 body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #eee;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
 }
-
-h1 {
-    text-align: center;
-}
-
-h4 {
-    text-align: center;
-}
-
-.homepage-recipe-tile {
-    margin-left: 1.2%;
-    margin-right: 1.2%;
-}
-
-.info-panel {
-    padding: 4px;
-}
-
+*/
 .form-signin {
     max-width: 330px;
     padding: 15px;
