Working mainly on properly display recipe items

--- a/client/src/Pages/home.css
+++ b/client/src/Pages/home.css
@@ -34,7 +34,7 @@ h4 {
 }
 
 /* Form stuff from login? */
-.form-signin {
+/* .form-signin {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
@@ -71,4 +71,4 @@ h4 {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-}
+} */
