Recipe Tile Components fit properly now

--- a/client/src/Pages/styles.css
+++ b/client/src/Pages/styles.css
@@ -2,3 +2,7 @@
 .rowSpacing {
     margin-bottom: 15px;
 }
+
+.bodyStyle {
+    background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg');
+}
