--- a/client/src/Components/RecipeItem/styles.css
+++ b/client/src/Components/RecipeItem/styles.css
@@ -4,6 +4,7 @@
 }
 
 .flowContainer {
+    position: relative;
     /* We first create a flex layout context */
     display: flex;
     /* Then we define the flow direction
@@ -13,21 +14,32 @@
    * flex-wrap: wrap;
    */
     flex-flow: row wrap;
+    align-items: stretch;
     /* Then we define how is distributed the remaining space */
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .tileStyleA {
     margin-bottom: 10px;
     background-color: #ffd38b;
+    min-width: 22.75rem;
+    max-width: 22.75rem;
 }
 
 .tileStyleB {
-    margin-bottom: 10px;
     background-color: #ffc57e;
 }
 
 .homepage-recipe-tile {
-    margin-left: 1.2%;
-    margin-right: 1.2%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding: 15px;
+    flex-basis: 0;
+    flex-grow: 1;
+    min-width: 22.75rem;
+    max-width: 22.75rem;
+    margin: 0.5rem;
+    /* this is bootstraps m-2 */
+    /* max-width: 100%; */
 }
