Workflow updates, styling updates, login page updates

--- a/client/src/Pages/styles.css
+++ b/client/src/Pages/styles.css
@@ -5,6 +5,7 @@
 
 .bodyStyle {
     background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg');
+    background-attachment: scroll;
 }
 
 /* Blur on Hover */
