--- a/client/src/Pages/home.css
+++ b/client/src/Pages/home.css
@@ -2,18 +2,8 @@
     margin-bottom: 15px;
 }
 
-.tileStyleA {
-    margin-bottom: 10px;
-    background-color: #ffd38b;
-}
-
-.tileStyleB {
-    margin-bottom: 10px;
-    background-color: #ffc57e;
-}
-
-.bodyStyle {
-    background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg');
+.backgroundStyle {
+    background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg') scroll;
 }
 
 h1 {
@@ -32,43 +22,3 @@ h4 {
 .info-panel {
     padding: 4px;
 }
-
-/* Form stuff from login? */
-/* .form-signin {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-}
-
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-    margin-bottom: 10px;
-}
-
-.form-signin .checkbox {
-    font-weight: 400;
-}
-
-.form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
-}
-
-.form-signin .form-control:focus {
-    z-index: 2;
-}
-
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-} */
