More styling and workflow play

--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -1,6 +1,6 @@
 /* New Recipe Styles */
-.backgroundStyle {
+/* .backgroundStyle {
     background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg');
-    /* font-size: 1.25rem; */
-    /* font-weight: bold; */
-}
+    /* font-size: 1.25rem;
+    /* font-weight: bold;
+} */
