--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,4 +1,4 @@
-.homepage-recipe-tile {
+/* .homepage-recipe-tile {
     margin-left: 1.2%;
     margin-right: 1.2%;
 }
@@ -13,4 +13,4 @@ h1 {
 
 h4 {
     text-align: center;
-}
+} */
