--- a/client/src/Pages/login.css
+++ b/client/src/Pages/login.css
@@ -9,9 +9,10 @@ body {
     background-image: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg');
     background-size: cover;
     /* background-size: 100% 100%; */
-    background-position: center center;
+    /* background-position: center center; */
     /* background-blend-mode: color; */
-    background-attachment: scroll;
+    background-attachment: fixed;
+    padding-bottom: 400px;
 }
 
 .box {
