--- a/client/src/Pages/home.css
+++ b/client/src/Pages/home.css
@@ -1,22 +1,1 @@
-/* .rowSpacing {
-    margin-bottom: 15px;
-} */
-.backgroundStyle {
-    /* background-simage: url('http://www.freepptbackgrounds.net/wp-content/uploads/2014/02/Restaurant-Menu-Theme-Backgrounds.jpg'); */
-    /* background-size: cover; */
-    /* background-size: 100% 100%; */
-    /* background-position: center center; */
-    /* background-blend-mode: color; */
-    /* background-attachment: fixed; */
-}
-
-/* h1 {
-    text-align: center;
-}
-
-h4 {
-    text-align: center;
-} */
-/* .info-panel {
-    padding: 4px;
-} */
+/* Home Styles */
