--- a/client/src/Components/NewRecipe/NewRecipe.css
+++ b/client/src/Components/NewRecipe/NewRecipe.css
@@ -7,7 +7,7 @@
 }
 
 .notebookPage {
-    background-image: url('/images/notepad.jpg');
+    background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
     background-repeat: no-repeat;
     background-size: 100% 100%;
