small changes in recipeItem

--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -27,6 +27,11 @@
     text-align: center;
 }
 
+.recipeImage {
+    height: 200px;
+    width: 200px;
+}
+
 .homepage-recipe-tile {
     background-color: #ffc57e;
     position: relative;
