--- a/client/src/Components/Recipes/Recipes.css
+++ b/client/src/Components/Recipes/Recipes.css
@@ -1,4 +1,8 @@
 /* Recipes Styles */
-.rowSpacing {
-    margin-bottom: 15px;
+.recipesContainer {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+    justify-content: space-evenly;
+    margin: 15px 12.5% 100px 12.5%;
 }
