--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -106,7 +106,7 @@ if the content is smaller than the max space. */
     height: 800px;
 }
 
-.recipePopupFormContent {
+.recipePopupFormBackground {
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
     background-repeat: no-repeat;
@@ -122,6 +122,20 @@ if the content is smaller than the max space. */
     padding-left: 100px;
     padding-top: 20px;
     padding-right: 150px;
+}
+
+.recipePopupFormContentLeft {
+    display: flex;
+    height: 500px;
+    width: 400px;
+    flex-wrap: wrap;
+}
+
+.recipePopupFormContentRight {}
+
+.recipePopupTitleField {
+    width: 300px;
+    justify-content: center;
 }
 
 /* Blur on Hover */
