--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -91,50 +91,27 @@ if the content is smaller than the max space. */
     order: 2;
 }
 
-.recipePopup {
-    background-image: url('/images/OpenNotepadCropped.png');
-    /* background-size: cover; */
-    background-repeat: no-repeat;
-    background-size: 90% 75%;
-    background-position: center 0px;
-    /* background-blend-mode: color; */
-    /* background-attachment: fixed; */
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 800px;
-    height: 800px;
-}
-
 .recipePopupFormBackground {
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
     background-repeat: no-repeat;
-    background-size: 90% 75%;
+    background-size: 100% 85%;
     background-position: center 0px;
     /* background-blend-mode: color; */
     /* background-attachment: fixed; */
     position: relative;
-    top: -10%;
+    top: -20%;
     left: -20%;
-    width: 1200px;
-    height: 900px;
-    padding-left: 100px;
-    padding-top: 20px;
-    padding-right: 150px;
+    width: 75rem;
+    height: 56.25rem;
+    padding-left: 50px;
+    padding-top: 27px;
+    padding-right: 155px;
+    padding-bottom: 175px;
 }
-
-.recipePopupFormContentLeft {
-    display: flex;
-    height: 500px;
-    width: 400px;
-    flex-wrap: wrap;
-}
-
-.recipePopupFormContentRight {}
 
 .recipePopupTitleField {
-    width: 300px;
+    width: 557px;
     justify-content: center;
 }
 
