--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -11,14 +11,21 @@ if the content is smaller than the max space. */
 
 .recipeName {
     text-align: center;
+    height: 40px;
+    width: auto;
+    font-size: 1.6vw;
 }
 
 .recipeDifficulty {
     text-align: center;
+    height: 20px;
+    width: auto;
 }
 
 .recipeCookTime {
     text-align: center;
+    height: 25px;
+    width: auto;
 }
 
 .recipeImage {
@@ -91,27 +98,51 @@ if the content is smaller than the max space. */
     order: 2;
 }
 
+.recipePopup {
+    background-image: url('/images/OpenNotepadCropped.png');
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    background-size: 90% 75%;
+    background-position: center 0px;
+    /* background-blend-mode: color; */
+    /* background-attachment: fixed; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    height: 800px;
+}
+
 .recipePopupFormBackground {
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
     background-repeat: no-repeat;
-    background-size: 100% 85%;
+    background-size: 90% 75%;
     background-position: center 0px;
     /* background-blend-mode: color; */
     /* background-attachment: fixed; */
     position: relative;
     top: -20%;
     left: -20%;
-    width: 75rem;
-    height: 56.25rem;
-    padding-left: 50px;
-    padding-top: 27px;
-    padding-right: 155px;
-    padding-bottom: 175px;
+    width: 150%;
+    height: 175%;
+    padding-left: 6.25%;
+    padding-top: 3.375%;
+    padding-right: 19.375%;
+    padding-bottom: 21.875%;
 }
 
+.recipePopupFormContentLeft {
+    display: flex;
+    height: 500px;
+    width: 400px;
+    flex-wrap: wrap;
+}
+
+.recipePopupFormContentRight {}
+
 .recipePopupTitleField {
-    width: 557px;
+    width: 300px;
     justify-content: center;
 }
 
