--- a/client/src/Components/RecipeItem/RecipeItem.css
+++ b/client/src/Components/RecipeItem/RecipeItem.css
@@ -117,33 +117,35 @@ if the content is smaller than the max space. */
     background-image: url('/images/OpenNotepadCropped.png');
     /* background-size: cover; */
     background-repeat: no-repeat;
-    background-size: 90% 75%;
+    background-size: 100% 85%;
     background-position: center 0px;
     /* background-blend-mode: color; */
     /* background-attachment: fixed; */
     position: relative;
-    top: -20%;
-    left: -20%;
-    width: 150%;
-    height: 175%;
-    padding-left: 6.25%;
-    padding-top: 3.375%;
-    padding-right: 19.375%;
-    padding-bottom: 21.875%;
+    top: -5vw;
+    left: -10vw;
+    width: 80vw;
+    height: 900px;
+    padding-left: 50px;
+    padding-top: 27px;
+    padding-right: 155px;
+    padding-bottom: 175px;
 }
 
-.recipePopupFormContentLeft {
-    display: flex;
-    height: 500px;
-    width: 400px;
-    flex-wrap: wrap;
+.recipePopupContainer {
+    display: grid;
+    width: 995px;
+    height: 698px;
 }
-
-.recipePopupFormContentRight {}
 
 .recipePopupTitleField {
-    width: 300px;
-    justify-content: center;
+    width: 455px;
+    align-items: center;
+}
+
+p.recipePopupTitleField {
+    font-size: 2em;
+    margin: 0;
 }
 
 /* Blur on Hover */
